# flybin

./: .env.example  Cargo.toml  LICENSE  flake.nix  justfile
flybin-admin/: package.json  pnpm-lock.yaml
flybin-admin/src/lib/: Paste.svelte  db.ts
flybin-admin/src/routes/: +error.svelte  +page.server.ts  +page.svelte
flybin-admin/src/routes/login/: +page.server.ts  +page.svelte
flybin-common/: Cargo.toml
flybin-common/src/: paste.rs
flybin-server/: Cargo.toml
flybin-server/src/: error.rs  main.rs  paste.rs  server.rs
migrations/: 20230712061757_create_pastes.down.sql  20230712061757_create_pastes.up.sql  20230727091634_create_admins.down.sql  20230727091634_create_admins.up.sql  20230728084618_create_sessions.down.sql  20230728084618_create_sessions.up.sql
