[package]
name = "flybin-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "sqlite", "macros", "chrono"] }
dotenvy = "0.15.7"
blake3 = "1.4.1"
chrono = "0.4.26"
nanoid = "0.4.0"
