[package]
name = "flybin-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6.18", features = ["macros"] }
nanoid = "0.4.0"
tokio = { version = "1.29.1", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "sqlite", "macros", "chrono"] }
dotenvy = "0.15.7"
chrono = "0.4.26"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tower-http = { version = "0.4.1", features = ["trace"] }
syntect = "5.0.0"
serde = { version = "1.0.171", features = ["derive"] }
blake3 = "1.4.1"
tower = { version = "0.4.13", features = ["full"] }

flybin-common = { path = "../flybin-common" }
